--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterProject/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/StarterProject/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-ServerDefaultMap=/Game/StarterProject/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GlobalDefaultGameMode=/Script/GDKTestGyms.GDKTestGymsGameMode
+GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GameInstanceClass=/Script/SpatialGDK.SpatialGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -32,6 +32,12 @@ LogSpatialOSActorChannel=Log
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -39,13 +45,12 @@ DefaultFluidFriction=0.300000
 SimulateScratchMemorySize=262144
 RagdollAggregateThreshold=4
 TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
 bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
-PhysicErrorCorrection=(PingExtrapolation=0.100000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
+PhysicErrorCorrection=(PingExtrapolation=0.100000,PingLimit=100.000000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,MaxLinearHardSnapDistance=400.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
 LockedAxis=Invalid
 DefaultDegreesOfFreedom=Full3D
 BounceThresholdVelocity=200.000000
@@ -72,14 +77,6 @@ bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/NavigationSystem.NavigationSystemV1]
-bAllowClientSideNavigation=True
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-
