--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -31,5 +31,8 @@ bEnableOffloading=False
 ActorGroups=()
 ServerWorkerTypes=("UnrealWorker")
 WorkerLogLevel=Warning
+bEnableUnrealLoadBalancer=False
+LoadBalancingWorkerType=(WorkerTypeName="")
+LoadBalanceStrategy=None
 
 
