--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+GameDefaultMap=/Game/Maps/BenchmarkGym.BenchmarkGym
+EditorStartupMap=/Game/Maps/BenchmarkGym.BenchmarkGym
 ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GameInstanceClass=/Script/SpatialGDK.SpatialGameInstance
@@ -80,5 +80,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
