Resetting engine back to default EmptyGym

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/BenchmarkGym.BenchmarkGym
-EditorStartupMap=/Game/Maps/BenchmarkGym.BenchmarkGym
+GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
 ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GameInstanceClass=/Script/SpatialGDK.SpatialGameInstance
