--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -34,5 +34,16 @@ WorkerLogLevel=Warning
 bEnableUnrealLoadBalancer=False
 LoadBalancingWorkerType=(WorkerTypeName="")
 LoadBalanceStrategy=None
+SpatialDebuggerClassPath=/SpatialGDK/SpatialDebugger/BP_SpatialDebugger.BP_SpatialDebugger_C
+LockingPolicy=None
+bUseRPCRingBuffers=False
+DefaultRPCRingBufferSize=8
+RPCRingBufferSizeMap=()
+MaxRPCRingBufferSize=32
+bTcpNoDelay=False
+UdpServerUpstreamUpdateIntervalMS=1
+UdpServerDownstreamUpdateIntervalMS=1
+UdpClientUpstreamUpdateIntervalMS=1
+UdpClientDownstreamUpdateIntervalMS=1
 
 
