Switch to SpatialWorldSettings

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_SpatialGDKCharacter",NewClassName="GDKTestGymsCharacter")
 +ActiveClassRedirects=(OldClassName="StarterProjectGameMode",NewClassName="GDKTestGymsGameMode")
 +ActiveClassRedirects=(OldClassName="StarterProjectCharacter",NewClassName="GDKTestGymsCharacter")
+WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
 
 [Core.Log]
 LogSpatialOSActorChannel=Log
