Remove old settings from ini

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -32,10 +32,8 @@ ActorGroups=()
 ServerWorkerTypes=("UnrealWorker")
 WorkerLogLevel=Warning
 bEnableUnrealLoadBalancer=False
-LoadBalancingWorkerType=(WorkerTypeName="")
-LoadBalanceStrategy=None
+LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 SpatialDebuggerClassPath=/SpatialGDK/SpatialDebugger/BP_SpatialDebugger.BP_SpatialDebugger_C
-LockingPolicy=None
 bUseRPCRingBuffers=False
 DefaultRPCRingBufferSize=8
 RPCRingBufferSizeMap=()
