Added qbif render component

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{6F6FF3AE-4967-00CC-2FD9-5098ED8FCD0C}",
+	"EngineAssociation": "",
 	"Category": "",
 	"Description": "",
 	"Modules": [
