--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -51,6 +51,8 @@ FullFrequencyNetCullDistanceRatio=0.330000
 +InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
 +InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
 +InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
++InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
++InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
 bEnableClientResultTypes=False
 
 
