Configure HandoverGym to use 4-worker grid. (#21)
* Switch to SpatialWorldSettings

* Remove old settings from ini

* Configure HandoverGym for 4-workers

* Enable load balancing by default

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -31,11 +31,9 @@ bEnableOffloading=False
 ActorGroups=()
 ServerWorkerTypes=("UnrealWorker")
 WorkerLogLevel=Warning
-bEnableUnrealLoadBalancer=False
-LoadBalancingWorkerType=(WorkerTypeName="")
-LoadBalanceStrategy=None
+bEnableUnrealLoadBalancer=True
+LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 SpatialDebuggerClassPath=/SpatialGDK/SpatialDebugger/BP_SpatialDebugger.BP_SpatialDebugger_C
-LockingPolicy=None
 bUseRPCRingBuffers=False
 DefaultRPCRingBufferSize=8
 RPCRingBufferSizeMap=()
