--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -4,6 +4,7 @@ EntityPoolRefreshThreshold=1000
 EntityPoolRefreshCount=2000
 HeartbeatIntervalSeconds=2.000000
 HeartbeatTimeoutSeconds=10.000000
+HeartbeatTimeoutWithEditorSeconds=10000.000000
 ActorReplicationRateLimit=0
 EntityCreationRateLimit=0
 UseIsActorRelevantForConnection=False
@@ -17,7 +18,6 @@ bEnableMetrics=True
 bEnableMetricsDisplay=False
 MetricsReportRate=2.000000
 bUseFrameTimeAsLoad=False
-bCheckRPCOrder=False
 bBatchSpatialPositionUpdates=True
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableServerQBI=True
@@ -31,9 +31,9 @@ bEnableOffloading=False
 ActorGroups=()
 ServerWorkerTypes=("UnrealWorker")
 WorkerLogLevel=Warning
+SpatialDebugger=None
 bEnableUnrealLoadBalancer=True
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
-SpatialDebuggerClassPath=/SpatialGDK/SpatialDebugger/BP_SpatialDebugger.BP_SpatialDebugger_C
 bUseRPCRingBuffers=False
 DefaultRPCRingBufferSize=8
 RPCRingBufferSizeMap=()
@@ -43,5 +43,11 @@ UdpServerUpstreamUpdateIntervalMS=1
 UdpServerDownstreamUpdateIntervalMS=1
 UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
-
+bAsyncLoadNewClassesOnEntityCheckout=False
+bEnableNetCullDistanceInterest=False
+bEnableNetCullDistanceFrequency=False
+FullFrequencyNetCullDistanceRatio=0.330000
++InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
++InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
+bEnableClientResultTypes=False
 
