update max player/spectator number

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -7,3 +7,6 @@ bSpatialNetworking=True
 +DirectoriesToAlwaysCook=(Path="Spatial")
 bCookAll=True
 
+[/Script/Engine.GameSession]
+MaxPlayers=1000
+MaxSpectators=1000
