Cleaned up old DestroyStartupActorGym assets, added project default SpatialDebugger

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -31,7 +31,7 @@ bEnableOffloading=False
 ActorGroups=()
 ServerWorkerTypes=("UnrealWorker")
 WorkerLogLevel=Warning
-SpatialDebugger=None
+SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
 bEnableUnrealLoadBalancer=True
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bUseRPCRingBuffers=False
