Reset sensible spatial gdk defaults

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -1,3 +1,4 @@
+
 [/Script/SpatialGDK.SpatialGDKSettings]
 EntityPoolInitialReservationCount=3000
 EntityPoolRefreshThreshold=1000
@@ -9,7 +10,7 @@ ActorReplicationRateLimit=0
 EntityCreationRateLimit=0
 UseIsActorRelevantForConnection=False
 OpsUpdateRate=1000.000000
-bEnableHandover=True
+bEnableHandover=False
 MaxNetCullDistanceSquared=900000000.000000
 QueuedIncomingRPCWaitTime=1.000000
 PositionUpdateFrequency=1.000000
@@ -18,14 +19,13 @@ bEnableMetrics=True
 bEnableMetricsDisplay=False
 MetricsReportRate=2.000000
 bUseFrameTimeAsLoad=False
-bBatchSpatialPositionUpdates=True
+bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
-bEnableServerQBI=True
+bEnableServerQBI=False
+bEnableResultTypes=False
 bPackRPCs=False
 DefaultReceptionistHost=127.0.0.1
-bUseDevelopmentAuthenticationFlow=False
-DevelopmentAuthenticationToken=
-DevelopmentDeploymentToConnect=
+ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=False
 ActorGroups=()
@@ -34,6 +34,7 @@ WorkerLogLevel=Warning
 SpatialDebugger=None
 bEnableUnrealLoadBalancer=True
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
+bRunSpatialWorkerConnectionOnGameThread=False
 bUseRPCRingBuffers=False
 DefaultRPCRingBufferSize=8
 RPCRingBufferSizeMap=()
@@ -49,5 +50,4 @@ bEnableNetCullDistanceFrequency=False
 FullFrequencyNetCullDistanceRatio=0.330000
 +InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
 +InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
-bEnableClientResultTypes=False
 
