Enable basic replication graph

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -39,6 +39,9 @@ bAllowClientSideNavigation=True
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+;ReplicationDriverClassName=/Script/ReplicationGraph.BasicReplicationGraph
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
