Move hot MazeGeneration path to c++, add distributed actors, for spawning AI, Food, PlayerStarts in editor.

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
 EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
+ServerDefaultMap=/Game/Maps/OffloadingBenchmarkGym.OffloadingBenchmarkGym
+GlobalDefaultGameMode=/Game/Characters/OffloadingAI/OffloadingGameMode_BP.OffloadingGameMode_BP_C
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -35,6 +35,8 @@ DefaultGraphicsPerformance=Maximum
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
