--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -40,7 +40,7 @@ TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
-;ReplicationDriverClassName=/Script/ReplicationGraph.BasicReplicationGraph
+;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -87,4 +87,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
 
