--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -40,6 +40,7 @@ TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
+; Uncomment this to enable the replication graph
 ;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 
 [/Script/Engine.PhysicsSettings]
