--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -22,7 +22,7 @@ bUseFrameTimeAsLoad=False
 bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableServerQBI=False
-bEnableResultTypes=False
+bEnableResultTypes=True
 bPackRPCs=False
 DefaultReceptionistHost=127.0.0.1
 ServicesRegion=Default
