Fix net-startup related stuff. Add number of npcs via worker flag & user override (U,J)

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -8,11 +8,12 @@ HeartbeatTimeoutSeconds=10.000000
 HeartbeatTimeoutWithEditorSeconds=10000.000000
 ActorReplicationRateLimit=0
 EntityCreationRateLimit=0
-UseIsActorRelevantForConnection=False
+bUseIsActorRelevantForConnection=False
 OpsUpdateRate=1000.000000
 bEnableHandover=False
 MaxNetCullDistanceSquared=900000000.000000
 QueuedIncomingRPCWaitTime=1.000000
+QueuedOutgoingRPCWaitTime=1.000000
 PositionUpdateFrequency=1.000000
 PositionDistanceThreshold=100.000000
 bEnableMetrics=True
@@ -21,18 +22,17 @@ MetricsReportRate=2.000000
 bUseFrameTimeAsLoad=False
 bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
-bEnableServerQBI=False
 bEnableResultTypes=False
 bPackRPCs=False
 DefaultReceptionistHost=127.0.0.1
 ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
-bEnableOffloading=False
-ActorGroups=()
-ServerWorkerTypes=("UnrealWorker")
+bEnableOffloading=True
+ActorGroups=(("Player", (OwningWorkerType=(WorkerTypeName="UnrealWorker"),ActorClasses=(/Game/Characters/OffloadingAI/OffloadingAI_Player_BP.OffloadingAI_Player_BP_C))),("AI", (OwningWorkerType=(WorkerTypeName="AIWorker"),ActorClasses=(/Game/Characters/OffloadingAI/OffloadingAICharacter_BP.OffloadingAICharacter_BP_C,/Game/Characters/OffloadingAI/AISpawner_BP.AISpawner_BP_C))))
+ServerWorkerTypes=("UnrealWorker","AIWorker")
 WorkerLogLevel=Warning
 SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
-bEnableUnrealLoadBalancer=True
+bEnableUnrealLoadBalancer=False
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bRunSpatialWorkerConnectionOnGameThread=False
 bUseRPCRingBuffers=False
@@ -45,9 +45,14 @@ UdpServerDownstreamUpdateIntervalMS=1
 UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
 bAsyncLoadNewClassesOnEntityCheckout=False
+RPCQueueWarningTimeouts=()
+RPCQueueWarningDefaultTimeout=2.000000
 bEnableNetCullDistanceInterest=True
 bEnableNetCullDistanceFrequency=False
 FullFrequencyNetCullDistanceRatio=0.330000
 +InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
 +InterestRangeFrequencyPairs=(DistanceRatio=0.660000,Frequency=2.000000)
+bUseSecureClientConnection=False
+bUseSecureServerConnection=False
+bEnableClientQueriesOnServer=False
 
