--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -33,10 +33,6 @@ LogSpatialOSActorChannel=Log
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
-[/Script/NavigationSystem.NavigationSystemV1]
-bAllowClientSideNavigation=True
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
@@ -44,6 +40,21 @@ DefaultGraphicsPerformance=Maximum
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
 ;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+
+[/Script/NavigationSystem.NavigationSystemV1]
+CrowdManagerClass=/Script/AIModule.CrowdManager
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=False
+bAllowClientSideNavigation=True
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+DataGatheringMode=Instant
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
++SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=35.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=None,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
+DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
