Tidy up, move, refactor, etc

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -28,8 +28,8 @@ DefaultReceptionistHost=127.0.0.1
 ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=True
-ActorGroups=(("Player", (OwningWorkerType=(WorkerTypeName="UnrealWorker"),ActorClasses=(/Game/Characters/OffloadingAI/OffloadingAI_Player_BP.OffloadingAI_Player_BP_C))),("AI", (OwningWorkerType=(WorkerTypeName="AIWorker"),ActorClasses=(/Game/Characters/OffloadingAI/OffloadingAICharacter_BP.OffloadingAICharacter_BP_C,/Game/Characters/OffloadingAI/AISpawner_BP.AISpawner_BP_C))))
-ServerWorkerTypes=("UnrealWorker","AIWorker")
+ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
+ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
 SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
 bEnableUnrealLoadBalancer=False
@@ -55,4 +55,5 @@ FullFrequencyNetCullDistanceRatio=0.330000
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+
 
