--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/OffloadingBenchmarkGymTiny.OffloadingBenchmarkGymTiny
 ServerDefaultMap=/Game/Maps/OffloadingBenchmarkGym.OffloadingBenchmarkGym
 GlobalDefaultGameMode=/Game/Characters/OffloadingAI/OffloadingGameMode_BP.OffloadingGameMode_BP_C
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
