--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -29,6 +29,5 @@ bMobileConnectToLocalDeployment=False
 MobileRuntimeIP=
 MobileWorkerType=UnrealClient
 MobileExtraCommandLineArgs=
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker",Flags=(("num_npcs", "5"))),(WorkerTypeName="AIWorker")))
-
+LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker",Flags=(("num_npcs", "5"))),(WorkerTypeName="NPCWorker")))
 
