--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -85,9 +85,11 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
-[/Script/Engine.Player]
-ConfiguredInternetSpeed=10000000
-
 [/Script/OnlineSubsystemUtils.IpNetDriver]
-MaxClientRate=10000000
-MaxInternetClientRate=10000000
+bNoTimeouts=true
+MaxClientRate=30000
+MaxInternetClientRate=20000
+
+[/Script/Engine.Player]
+ConfiguredInternetSpeed=30000
+ConfiguredLanSpeed=30000
