--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-EditorStartupMap=/Game/Maps/OffloadingBenchmarkGymTiny.OffloadingBenchmarkGymTiny
-ServerDefaultMap=/Game/Maps/OffloadingBenchmarkGym.OffloadingBenchmarkGym
-GlobalDefaultGameMode=/Game/Characters/OffloadingAI/OffloadingGameMode_BP.OffloadingGameMode_BP_C
+EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -33,6 +33,8 @@ LogSpatialOSActorChannel=Log
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
@@ -40,21 +42,6 @@ DefaultGraphicsPerformance=Maximum
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
 ;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
-
-[/Script/NavigationSystem.NavigationSystemV1]
-CrowdManagerClass=/Script/AIModule.CrowdManager
-bAutoCreateNavigationData=True
-bSpawnNavDataInNavBoundsLevel=False
-bAllowClientSideNavigation=True
-bShouldDiscardSubLevelNavData=True
-bTickWhilePaused=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Default",Color=(B=0,G=255,R=140,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=35.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=None,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
-DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
