--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,33 +1,5 @@
 
+
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-bShowSpatialServiceButton=True
-bDeleteDynamicEntities=True
-bGenerateDefaultLaunchConfig=True
-bUseGDKPinnedRuntimeVersion=True
-LocalRuntimeVersion=
-CloudRuntimeVersion=
-SpatialOSLaunchConfig=(FilePath="D:/Dev/offloading-test-gym/spatial/default_launch.json")
-bExposeRuntimeIP=False
-ExposedRuntimeIP=
-bStopSpatialOnExit=True
-bAutoStartLocalDeployment=True
-SpatialOSSnapshotToSave=default.snapshot
-SpatialOSSnapshotToLoad=default.snapshot
-AssemblyName=
-PrimaryDeploymentName=
-PrimaryLaunchConfigPath=(FilePath="")
-SnapshotPath=(FilePath="")
-PrimaryDeploymentRegionCode=US
-bUseDevelopmentAuthenticationFlow=False
-DevelopmentAuthenticationToken=
-DevelopmentDeploymentToConnect=
-SimulatedPlayerDeploymentRegionCode=US
-bSimulatedPlayersIsEnabled=False
-SimulatedPlayerDeploymentName=
-NumberOfSimulatedPlayers=0
-bMobileConnectToLocalDeployment=False
-MobileRuntimeIP=
-MobileWorkerType=UnrealClient
-MobileExtraCommandLineArgs=
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker",Flags=(("num_npcs", "5"))),(WorkerTypeName="NPCWorker")))
+LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
 
