--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -29,7 +29,7 @@ ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
 bEnableOffloading=False
 ActorGroups=()
-ServerWorkerTypes=("UnrealWorker")
+ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
 SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
 bEnableUnrealLoadBalancer=True
