Some more bandwidth tweaks

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -10,3 +10,8 @@ bCookAll=True
 [/Script/Engine.GameSession]
 MaxPlayers=1000
 MaxSpectators=1000
+
+[/Script/Engine.GameNetworkManager]
+TotalNetBandwidth=750000
+MaxDynamicBandwidth=600000
+MinDynamicBandwidth=15000
