[UNR-3102] Initial version of OffloadingBenchmarkGym (#55)
Adds initial version of new 'game like' gym for offloading.

1.5 km2 maze map.
Robots hunt for food randomly spawned around the map.
Chance when eating food to become 'enraged'.
'Enraged' robots are larger, run faster, and can eat other robots.
Robots can be human players, simulated players, offloaded NPCs.
Also adds the SpatialOS Robot.

--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,5 +1,5 @@
 
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker")))
+LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
 
