--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -26,6 +26,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="StarterProjectCharacter",NewClassName="GDKTestGymsCharacter")
 WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
 bUseFixedFrameRate=True
+FixedFrameRate=60.0
 
 [Core.Log]
 LogSpatialOSActorChannel=Log
