--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -25,6 +25,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="StarterProjectGameMode",NewClassName="GDKTestGymsGameMode")
 +ActiveClassRedirects=(OldClassName="StarterProjectCharacter",NewClassName="GDKTestGymsCharacter")
 WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
+; NFRs override this to run at 30fps (see NFRGameMode)
 bUseFixedFrameRate=True
 FixedFrameRate=60.0
 
