--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -44,7 +44,7 @@ DefaultGraphicsPerformance=Maximum
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
-;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
