Removing NFRGameMode and previous fixed frame rate settings

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -25,9 +25,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="StarterProjectGameMode",NewClassName="GDKTestGymsGameMode")
 +ActiveClassRedirects=(OldClassName="StarterProjectCharacter",NewClassName="GDKTestGymsCharacter")
 WorldSettingsClassName=/Script/SpatialGDK.SpatialWorldSettings
-; NFRs override this to run at 30fps (see NFRGameMode)
-bUseFixedFrameRate=True
-FixedFrameRate=60.0
 
 [Core.Log]
 LogSpatialOSActorChannel=Log
@@ -45,6 +42,7 @@ DefaultGraphicsPerformance=Maximum
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
 ;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+NetServerMaxTickRate=30
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
