Shouldn't of comitted this

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{47C54401-41DD-A5E7-A0A6-F0B42177C966}",
+	"EngineAssociation": "",
 	"Category": "",
 	"Description": "",
 	"Modules": [
