--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -92,11 +92,11 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 
 ; For NFR tests. This is to make a fair comparison between GDK and Native Unreal for a playable game (without lag + banding)
 ; TODO: We should adjust these once we have Spatial limits.
-[/Script/OnlineSubsystemUtils.IpNetDriver]
-bNoTimeouts=true
-MaxClientRate=60000
-MaxInternetClientRate=2000000
+;[/Script/OnlineSubsystemUtils.IpNetDriver]
+;bNoTimeouts=true
+;MaxClientRate=60000
+;MaxInternetClientRate=2000000
 
-[/Script/Engine.Player]
-ConfiguredInternetSpeed=100000
-ConfiguredLanSpeed=100000
+;[/Script/Engine.Player]
+;ConfiguredInternetSpeed=100000
+;ConfiguredLanSpeed=100000
