--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -95,7 +95,7 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 ;[/Script/OnlineSubsystemUtils.IpNetDriver]
 ;bNoTimeouts=true
 ;MaxClientRate=60000
-;MaxInternetClientRate=2000000
+MaxInternetClientRate=20000
 
 ;[/Script/Engine.Player]
 ;ConfiguredInternetSpeed=100000
