--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -92,7 +92,7 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 
 ; For NFR tests. This is to make a fair comparison between GDK and Native Unreal for a playable game (without lag + banding)
 ; TODO: We should adjust these once we have Spatial limits.
-;[/Script/OnlineSubsystemUtils.IpNetDriver]
+[/Script/OnlineSubsystemUtils.IpNetDriver]
 ;bNoTimeouts=true
 ;MaxClientRate=60000
 MaxInternetClientRate=20000
