--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -92,11 +92,15 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 
 ; For NFR tests. This is to make a fair comparison between GDK and Native Unreal for a playable game (without lag + banding)
 ; TODO: We should adjust these once we have Spatial limits.
+; For NFR tests. This is to make a fair comparison between GDK and Native Unreal for a playable game (without lag + banding)
+; TODO: We should adjust these once we have Spatial limits.
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ;bNoTimeouts=true
-;MaxClientRate=60000
+; Lan value - must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
+MaxClientRate=20000
 MaxInternetClientRate=20000
 
-;[/Script/Engine.Player]
-;ConfiguredInternetSpeed=100000
+[/Script/Engine.Player]
+; Client sends this value to server when connecting
+ConfiguredInternetSpeed=20000
 ;ConfiguredLanSpeed=100000
