--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -90,15 +90,12 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
-; For NFR tests. This is to make a fair comparison between GDK and Native Unreal for a playable game (without lag + banding)
-; TODO: We should adjust these once we have Spatial limits.
+; For NFR tests, set native client saturation to 20kB/s. This reflects our bandwidth targets we expect to achieve in Spatial
 [/Script/OnlineSubsystemUtils.IpNetDriver]
-;bNoTimeouts=true
-; Lan value - must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
+; MaxClientRate (lan value) must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
 MaxClientRate=20000
 MaxInternetClientRate=20000
 
 [/Script/Engine.Player]
-; Client sends this value to server when connecting
+ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
-;ConfiguredLanSpeed=100000
