--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -44,6 +44,8 @@ UdpServerUpstreamUpdateIntervalMS=1
 UdpServerDownstreamUpdateIntervalMS=1
 UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
+bExplicitFlushIntervals=True
+ExplicitMinimumFlush=1
 bAsyncLoadNewClassesOnEntityCheckout=False
 RPCQueueWarningTimeouts=()
 RPCQueueWarningDefaultTimeout=2.000000
