Update to 0.9 defaults

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -10,8 +10,8 @@ ActorReplicationRateLimit=0
 EntityCreationRateLimit=0
 bUseIsActorRelevantForConnection=False
 OpsUpdateRate=1000.000000
-bEnableHandover=False
-MaxNetCullDistanceSquared=900000000.000000
+bEnableHandover=True
+MaxNetCullDistanceSquared=0.000000
 QueuedIncomingRPCWaitTime=1.000000
 QueuedOutgoingRPCWaitTime=1.000000
 PositionUpdateFrequency=1.000000
@@ -23,7 +23,6 @@ bUseFrameTimeAsLoad=False
 bBatchSpatialPositionUpdates=False
 MaxDynamicallyAttachedSubobjectsPerClass=3
 bEnableResultTypes=True
-bPackRPCs=False
 DefaultReceptionistHost=127.0.0.1
 ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
@@ -35,8 +34,8 @@ SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDeb
 bEnableUnrealLoadBalancer=True
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bRunSpatialWorkerConnectionOnGameThread=False
-bUseRPCRingBuffers=False
-DefaultRPCRingBufferSize=8
+bUseRPCRingBuffers=True
+DefaultRPCRingBufferSize=32
 RPCRingBufferSizeMap=()
 MaxRPCRingBufferSize=32
 bTcpNoDelay=False
