Adding flush after RPC

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -45,7 +45,7 @@ UdpServerDownstreamUpdateIntervalMS=1
 UdpClientUpstreamUpdateIntervalMS=1
 UdpClientDownstreamUpdateIntervalMS=1
 bExplicitFlushIntervals=True
-ExplicitMinimumFlush=1
+bExplicitFlushAfterRPC=True
 bAsyncLoadNewClassesOnEntityCheckout=False
 RPCQueueWarningTimeouts=()
 RPCQueueWarningDefaultTimeout=2.000000
