--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -54,4 +54,4 @@ FullFrequencyNetCullDistanceRatio=0.330000
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
-
+bWorkerFlushAfterRPC=True
