--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Game/Plugins/UnrealGDK/
 spatial/schema
 spatial/snapshots
 Game/Content/Spatial/SchemaDatabase.uasset
+
+# Rider
+.idea/
+Game/Plugins/Developer/RiderLink
