--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -1,10 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
-GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 
@@ -99,3 +92,21 @@ MaxInternetClientRate=20000
 [/Script/Engine.Player]
 ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
+GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
+GlobalDefaultServerGameMode=None
++GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
+
+
