Default settings for testing offloading

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -94,7 +94,7 @@ ConfiguredLanSpeed=20000
 ConfiguredInternetSpeed=20000
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
+EditorStartupMap=/Game/Maps/offloadingbenchmarkgym.offloadingbenchmarkgym
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -103,10 +103,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
+GameDefaultMap=/Game/Maps/offloadingbenchmarkgym.offloadingbenchmarkgym
+ServerDefaultMap=/Game/Maps/offloadingbenchmarkgym.offloadingbenchmarkgym
 GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
 GlobalDefaultServerGameMode=None
 +GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
-
 
