--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -26,12 +26,12 @@ bEnableResultTypes=True
 DefaultReceptionistHost=127.0.0.1
 ServicesRegion=Default
 DefaultWorkerType=(WorkerTypeName="UnrealWorker")
-bEnableOffloading=False
+bEnableOffloading=True
 ActorGroups=(("NPC", (OwningWorkerType=(WorkerTypeName="NPCWorker"),ActorClasses=(/Game/OffloadingBenchmark/OffloadingBenchmark_NPC_BP.OffloadingBenchmark_NPC_BP_C,/Game/OffloadingBenchmark/NPCSpawner_BP.NPCSpawner_BP_C))))
 ServerWorkerTypes=("UnrealWorker","NPCWorker")
 WorkerLogLevel=Warning
 SpatialDebugger=BlueprintGeneratedClass'/Game/LoadBalancing/BP_VerboseSpatialDebugger.BP_VerboseSpatialDebugger_C'
-bEnableUnrealLoadBalancer=True
+bEnableUnrealLoadBalancer=False
 LoadBalancingWorkerType=(WorkerTypeName="UnrealWorker")
 bRunSpatialWorkerConnectionOnGameThread=False
 bUseRPCRingBuffers=True
