--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,5 +1,49 @@
 
-
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
+bShowSpatialServiceButton=False
+bDeleteDynamicEntities=True
+bGenerateDefaultLaunchConfig=True
+bUseGDKPinnedRuntimeVersion=True
+LocalRuntimeVersion=
+CloudRuntimeVersion=
+SpatialOSLaunchConfig=(FilePath="")
+ExposedRuntimeIP=
+bStopSpatialOnExit=False
+bAutoStartLocalDeployment=True
+SpatialOSSnapshotToSave=default.snapshot
+SpatialOSSnapshotToLoad=default.snapshot
+CookAndGeneratePlatform=Win64
+CookAndGenerateAdditionalArguments=-cookall -unversioned
+AssemblyName=
+PrimaryDeploymentName=
+PrimaryLaunchConfigPath=(FilePath="")
+SnapshotPath=(FilePath="")
+PrimaryDeploymentRegionCode=US
+MainDeploymentCluster=
+DeploymentTags=
+bBuildAndUploadAssembly=True
+AssemblyBuildConfiguration=Development
+bForceAssemblyOverwrite=False
+bBuildClientWorker=False
+bGenerateSchema=False
+bGenerateSnapshot=False
+BuildServerExtraArgs=
+BuildClientExtraArgs=
+BuildSimulatedPlayerExtraArgs=
+DevelopmentAuthenticationToken=
+DevelopmentDeploymentToConnect=
+SimulatedPlayerDeploymentRegionCode=US
+SimulatedPlayerCluster=
+bSimulatedPlayersIsEnabled=False
+SimulatedPlayerDeploymentName=
+NumberOfSimulatedPlayers=0
+bMobileOverrideConnectionFlow=False
+MobileConnectionFlow=LocalDeployment
+MobileRuntimeIPOverride=
+MobileWorkerType=UnrealClient
+MobileExtraCommandLineArgs=
+bStartPIEClientsWithLocalLaunchOnDevice=False
+LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkerConfig=(WorkerPermissions=(bAllPermissions=True,bAllowEntityCreation=True,bAllowEntityDeletion=True,bAllowEntityQuery=True,Components=),MaxConnectionCapacityLimit=0,bLoginRateLimitEnabled=False,LoginRateLimit=(Duration="",RequestsPerDuration=0),bAutoNumEditorInstances=True,NumEditorInstances=1,Flags=(("override_spawning", "true"),("total_npcs", "10"),("total_players", "1")),bManualWorkerConnectionOnly=False))
+SpatialOSNetFlowType=LocalDeployment
+
 
