--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -54,4 +54,5 @@ InterestRangeFrequencyPairs=(DistanceRatio=1.000000,Frequency=0.500000)
 bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
+bEnableMultiWorker=True
 
