--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -86,12 +86,12 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 ; For NFR tests, set native client saturation to 20kB/s. This reflects our bandwidth targets we expect to achieve in Spatial
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; MaxClientRate (lan value) must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
-MaxClientRate=200000
-MaxInternetClientRate=200000
+MaxClientRate=1900
+MaxInternetClientRate=1900
 
 [/Script/Engine.Player]
-ConfiguredLanSpeed=200000
-ConfiguredInternetSpeed=200000
+ConfiguredLanSpeed=1900
+ConfiguredInternetSpeed=1900
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
