Reduce VL threshold

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -86,12 +86,12 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 ; For NFR tests, set native client saturation to 20kB/s. This reflects our bandwidth targets we expect to achieve in Spatial
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; MaxClientRate (lan value) must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
-MaxClientRate=20000
-MaxInternetClientRate=20000
+MaxClientRate=4000
+MaxInternetClientRate=4000
 
 [/Script/Engine.Player]
-ConfiguredLanSpeed=20000
-ConfiguredInternetSpeed=20000
+ConfiguredLanSpeed=4000
+ConfiguredInternetSpeed=4000
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
