--- a/Game/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Game/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,6 +1,12 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP
 
+[/Script/UnrealEd.LevelEditorPlaySettings]
+PlayNetMode=PIE_Client
+RunUnderOneProcess=True
+PlayNetDedicated=True
+PlayNumberOfClients=2
+
 [/Script/SpatialGDKEditorToolbar.SpatialGDKEditorToolbarSettings]
 ProjectRootFolder=(Path="")
 SpatialOSLaunchConfig=default_launch.json
