disable cook all

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ bSpatialNetworking=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="Spatial")
-bCookAll=True
+bCookAll=False
 
 [/Script/Engine.GameSession]
 MaxPlayers=1000
