--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{6556614C-4416-397D-6C4F-1E95AF2585AB}",
+	"EngineAssociation": "",
 	"Category": "",
 	"Description": "",
 	"Modules": [
