DynamicLBSInfo is now properly initialized and replicated.

--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{F4F7377B-47F7-4ABB-D07C-8FBF571AB137}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -9,7 +9,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"SpatialGDK"
 			]
 		}
 	],
