Update comment in steps.yaml

--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -1,7 +1,7 @@
 ---
 steps:
-  # Run the UnrealGDK premerge with this version of the TestGyms repo
-  # only run for PRs
+  # Run the UnrealGDK premerge with this version of the TestGyms repo.
+  # Only run for PRs or as a post-merge on important branches, or if triggered manually.
   - label: "unreal-gdk-premerge"
     if: build.pull_request.id != null || build.source == "ui" || build.branch == "master" || build.branch == "release" || build.branch == "preview" || build.branch =~ /-rc/
     trigger: "unrealgdk-premerge"
