Cook Spatial Debugger folder for materials and fonts to be in the cloud deployments. Increase the height of the Spatial Debugger. Add quad lbs for a small map and apply to Handover map.

--- a/Game/Config/DefaultGame.ini
+++ b/Game/Config/DefaultGame.ini
@@ -5,6 +5,7 @@ bSpatialNetworking=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="Spatial")
++DirectoriesToAlwaysCook=(Path="/SpatialGDK/SpatialDebugger/")
 bCookAll=True
 
 [/Script/Engine.GameSession]
