--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{9DB116D3-41D1-ED9D-6856-E9A1CA649884}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
