Properly setup character with ASC, gameplay cues gym with necessary gas components

--- a/Game/Config/DefaultGameplayTags.ini
+++ b/Game/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -7,5 +8,6 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="food.eaten",DevComment="This food has been eaten")
-
++GameplayTagList=(Tag="GameplayCue",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Marker",DevComment="")
 
