--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -37,6 +37,31 @@ DefaultGraphicsPerformance=Maximum
 ;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 NetServerMaxTickRate=30
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+; MaxClientRate (lan value) must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
+MaxClientRate=20000
+MaxInternetClientRate=20000
+
+[/Script/Engine.Player]
+ConfiguredLanSpeed=20000
+ConfiguredInternetSpeed=20000
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/SpawnNPCGym.SpawnNPCGym
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
+GameDefaultMap=/Game/Maps/SpawnNPCGym.SpawnNPCGym
+ServerDefaultMap=/Game/Maps/SpawnNPCGym.SpawnNPCGym
+GlobalDefaultGameMode=/Game/GameModes/SpawnNPCGameMode.SpawnNPCGameMode_C
+GlobalDefaultServerGameMode=None
++GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -82,31 +107,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-; For NFR tests, set native client saturation to 20kB/s. This reflects our bandwidth targets we expect to achieve in Spatial
-[/Script/OnlineSubsystemUtils.IpNetDriver]
-; MaxClientRate (lan value) must be >= MaxInternetClientRate or MaxInternetClientRate is ignored
-MaxClientRate=20000
-MaxInternetClientRate=20000
-
-[/Script/Engine.Player]
-ConfiguredLanSpeed=20000
-ConfiguredInternetSpeed=20000
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EmptyGym.EmptyGym
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/GDKTestGyms.GDKTestGymsGameInstance
-GameDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-ServerDefaultMap=/Game/Maps/EmptyGym.EmptyGym
-GlobalDefaultGameMode=/Game/GameModes/GDKTestGymsGameMode.GDKTestGymsGameMode_C
-GlobalDefaultServerGameMode=None
-+GameModeClassAliases=(Name="LatencyTest",GameMode=/Game/Latency/LatencyGameMode.LatencyGameMode_C)
 
 
