--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{2AF17236-4A5E-B24F-0390-1892F51A1C39}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -16,6 +16,26 @@
 	"Plugins": [
 		{
 			"Name": "ReplicationGraph",
+			"Enabled": true
+		},
+		{
+			"Name": "SpatialGDK",
+			"Enabled": true
+		},
+		{
+			"Name": "EditorTests",
+			"Enabled": true
+		},
+		{
+			"Name": "FbxAutomationTestBuilder",
+			"Enabled": true
+		},
+		{
+			"Name": "FunctionalTestingEditor",
+			"Enabled": true
+		},
+		{
+			"Name": "RuntimeTests",
 			"Enabled": true
 		}
 	]
