add spawn npc test

--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,8 +1,6 @@
 
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
-StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
-bDeleteDynamicEntities=True
-AutoStopLocalDeployment=OnEndPIE
+LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)),ServerWorkerConfig=(WorkerTypeName="",WorkerPermissions=(bAllPermissions=True,bAllowEntityCreation=True,bAllowEntityDeletion=True,bAllowEntityQuery=True,Components=),bAutoNumEditorInstances=True,NumEditorInstances=1,Flags=(),bManualWorkerConnectionOnly=False))
+StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=False,bUseGDKPinnedRuntimeVersionForCloud=False,LocalRuntimeVersion="0.6.2",CloudRuntimeVersion="0.6.2")
 
