--- a/Game/GDKTestGyms.uproject
+++ b/Game/GDKTestGyms.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "",
+	"EngineAssociation": "{2AF17236-4A5E-B24F-0390-1892F51A1C39}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -11,11 +11,6 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
-		},
-		{
-			"Name": "GDKTestGymsFunctionalTests",
-			"Type": "Editor",
-			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
@@ -24,12 +19,24 @@
 			"Enabled": true
 		},
 		{
-			"Name": "OculusVR",
-			"Enabled": false
+			"Name": "SpatialGDK",
+			"Enabled": true
 		},
 		{
-			"Name": "SteamVR",
-			"Enabled": false
+			"Name": "EditorTests",
+			"Enabled": true
+		},
+		{
+			"Name": "FbxAutomationTestBuilder",
+			"Enabled": true
+		},
+		{
+			"Name": "FunctionalTestingEditor",
+			"Enabled": true
+		},
+		{
+			"Name": "RuntimeTests",
+			"Enabled": true
 		}
 	]
 }
